Css fix for introtext on small screens

--- a/web/src/components/introtext.module.css
+++ b/web/src/components/introtext.module.css
@@ -7,4 +7,11 @@
     background-color: rgba(0, 0, 0, 0.4) ;
     box-shadow: 4px 6px 4px 2px rgba(0, 0, 0, 0.2);
     padding: 10px 8px 20px 18px;
+    margin-left: -18px;
+
+    @media(--media-max-small) {
+        padding: 0 0 0 0;
+        margin-left: 0;
+    }
+
 }
